Fixed hidden horizontal scrollbar #150

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,6 +92,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 // Prevents dragging of links
 a {
   text-decoration: none !important;
@@ -119,6 +120,7 @@ a {
 // Class-level
 .container-after-titlebar {
   overflow-y: hidden !important;
+  position: initial !important;
 }
 
 .container-fluid {
